--- a/index.html
+++ b/index.html
@@ -11,16 +11,54 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="plain-background">
+
+    <!--Header-->
+    <div class="container">
+        <header class="d-flex justify-content-center py-3">
+          <ul class="nav nav-pills">
+            <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Projects</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Resume</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+          </ul>
+        </header>
+      </div>
+
     <!--Landing-->
-    <div class="px-4 pt-5 my-5 text-center border-bottom gradient-background">
+    <div class="px-4 pt-5 mb-5 text-center border-bottom plain-background">
         <h1 class="display-4 fw-bold text-body-emphasis">I'm Saanthanu </h1>
         <div class="col-lg-6 mx-auto">
           <h2 class="lead mb-4">a programmer</h2>
         </div>
         <div class="overflow-hidden" style="max-height: 30vh;">
           <div class="container px-5">
-            <img src="./assets/colourful-illustration-programmer-working.png" class="img-fluid  rounded-3 shadow-lg mb-4" alt="Example image" width="700" height="500" loading="lazy">
+            <img src="./assets/colourful-illustration-programmer-working.png" class="img-fluid  " alt="image" width="700" height="500" >
+          </div>
+        </div>
+    </div>
+
+    <!--Profile-->
+    <div class="container my-5">
+        <div class="p-5 text-center bg-body-tertiary rounded-3">
+          <img class="profilepic" src="./assets/Saanthanu.jpg" alt="Picture of the creator" height="100px">
+          <h2 class="text-body-emphasis hello">Hello,</h2>
+          <p class="col-lg-8 mx-auto fs-5 text-muted">
+            I am an iOS and Web <code>Developer</code>. | Passionate About Building Intuitive and High-Performance Websites and Mobile Apps.
+          </p>
+        </div>
+    </div>
+
+    <!--Skills-->
+    <div class="container col-xxl-8 px-4 py-5">
+        <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+          <div class="col-10 col-sm-8 col-lg-6">
+            <img src="./assets/giphy.gif" class="d-block mx-lg-auto img-fluid cat" alt="cat typing" width="400" height="400" loading="lazy">
+          </div>
+          <div class="col-lg-6">
+            <h2 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Design & Development</h2>
+            <p class="lead">I started learning to code when I was 12 years old because I wanted to make my own video games. Over time, I have gained a wealth of experience designing and developing mobile and web applications.</p>
           </div>
         </div>
       </div>
